Bug 552828 - update Form History to work with Electrolysis [r=dolske]
UltraBlame original commit: 3e1fc0dcf7c8be3abcaa0d4244aedfe375d09410

--- a/toolkit/components/satchel/test/subtst_form_submission_1.html
+++ b/toolkit/components/satchel/test/subtst_form_submission_1.html
@@ -1,9 +1,36 @@
 <
+!
+DOCTYPE
+HTML
+>
+<
+html
+>
+<
+head
+>
+<
+/
+head
+>
+<
+body
+>
+<
 form
 id
 =
 "
-subform
+subform1
+"
+onsubmit
+=
+"
+return
+checkSubmit
+(
+21
+)
 "
 >
 <
@@ -42,8 +69,142 @@ button
 form
 >
 <
+form
+id
+=
+"
+subform2
+"
+onsubmit
+=
+"
+return
+checkSubmit
+(
+100
+)
+"
+>
+<
+input
+id
+=
+"
+subtest2
+"
+type
+=
+"
+text
+"
+name
+=
+"
+subtest2
+"
+>
+<
+button
+type
+=
+"
+submit
+"
+>
+Submit
+<
+/
+button
+>
+<
+/
+form
+>
+<
 script
 >
+function
+checkSubmit
+(
+num
+)
+{
+netscape
+.
+security
+.
+PrivilegeManager
+.
+enablePrivilege
+(
+'
+UniversalXPConnect
+'
+)
+;
+return
+parent
+.
+checkSubmit
+(
+num
+)
+;
+}
+function
+clickButton
+(
+num
+)
+{
+if
+(
+num
+=
+=
+21
+)
+document
+.
+querySelectorAll
+(
+"
+button
+"
+)
+[
+0
+]
+.
+click
+(
+)
+;
+else
+if
+(
+num
+=
+=
+100
+)
+document
+.
+querySelectorAll
+(
+"
+button
+"
+)
+[
+1
+]
+.
+click
+(
+)
+;
+}
 /
 /
 set
@@ -81,7 +242,30 @@ value
 subtestValue
 "
 ;
+document
+.
+getElementById
+(
+"
+subtest2
+"
+)
+.
+value
+=
+"
+subtestValue
+"
+;
 <
 /
 script
+>
+<
+/
+body
+>
+<
+/
+html
 >
