--- a/toolkit/components/satchel/test/test_form_submission.html
+++ b/toolkit/components/satchel/test/test_form_submission.html
@@ -140,6 +140,43 @@ display
 p
 >
 <
+iframe
+id
+=
+"
+iframe
+"
+src
+=
+"
+https
+:
+/
+/
+example
+.
+com
+/
+tests
+/
+toolkit
+/
+components
+/
+satchel
+/
+test
+/
+subtst_form_submission_1
+.
+html
+"
+>
+<
+/
+iframe
+>
+<
 div
 id
 =
@@ -1785,80 +1822,6 @@ button
 form
 >
 <
-iframe
-id
-=
-"
-iframe1
-"
-src
-=
-"
-https
-:
-/
-/
-example
-.
-com
-/
-tests
-/
-toolkit
-/
-components
-/
-satchel
-/
-test
-/
-subtst_form_submission_1
-.
-html
-"
->
-<
-/
-iframe
->
-<
-iframe
-id
-=
-"
-iframe2
-"
-src
-=
-"
-https
-:
-/
-/
-example
-.
-com
-/
-tests
-/
-toolkit
-/
-components
-/
-satchel
-/
-test
-/
-subtst_form_submission_1
-.
-html
-"
->
-<
-/
-iframe
->
-<
 form
 id
 =
@@ -2991,6 +2954,9 @@ case
 case
 20
 :
+case
+21
+:
 ok
 (
 !
@@ -3007,25 +2973,31 @@ storage
 ;
 break
 ;
-/
-/
-The
-other
-tests
-do
-save
-data
-.
-.
-.
+case
+100
+:
+checkForSave
+(
+"
+subtest2
+"
+"
+subtestValue
+"
+"
+checking
+saved
+subtest
+value
+"
+)
+;
+break
+;
 case
 101
 :
-ok
-(
-fh
-.
-entryExists
+checkForSave
 (
 "
 test1
@@ -3033,7 +3005,6 @@ test1
 "
 savedValue
 "
-)
 "
 checking
 saved
@@ -3046,11 +3017,7 @@ break
 case
 102
 :
-ok
-(
-fh
-.
-entryExists
+checkForSave
 (
 "
 test2
@@ -3058,7 +3025,6 @@ test2
 "
 savedValue
 "
-)
 "
 checking
 saved
@@ -3071,11 +3037,7 @@ break
 case
 103
 :
-ok
-(
-fh
-.
-entryExists
+checkForSave
 (
 "
 test3
@@ -3083,7 +3045,6 @@ test3
 "
 savedValue
 "
-)
 "
 checking
 saved
@@ -3096,11 +3057,7 @@ break
 case
 104
 :
-ok
-(
-fh
-.
-entryExists
+checkForSave
 (
 "
 test4
@@ -3108,7 +3065,6 @@ test4
 "
 trimTrailingAndLeadingSpace
 "
-)
 "
 checking
 saved
@@ -3126,11 +3082,7 @@ break
 case
 105
 :
-ok
-(
-fh
-.
-entryExists
+checkForSave
 (
 "
 test5
@@ -3138,7 +3090,6 @@ test5
 "
 trimTrailingAndLeadingWhitespace
 "
-)
 "
 checking
 saved
@@ -3156,11 +3107,7 @@ break
 case
 106
 :
-ok
-(
-fh
-.
-entryExists
+checkForSave
 (
 "
 test6
@@ -3168,7 +3115,6 @@ test6
 "
 00000000109181
 "
-)
 "
 checking
 saved
@@ -3202,11 +3148,7 @@ i
 +
 )
 {
-ok
-(
-fh
-.
-entryExists
+checkForSave
 (
 "
 test7_
@@ -3223,7 +3165,6 @@ invalid16
 [
 i
 ]
-)
 "
 checking
 saved
@@ -3258,11 +3199,7 @@ i
 +
 )
 {
-ok
-(
-fh
-.
-entryExists
+checkForSave
 (
 "
 test8_
@@ -3279,7 +3216,6 @@ invalid15
 [
 i
 ]
-)
 "
 checking
 saved
@@ -3293,11 +3229,7 @@ break
 case
 109
 :
-ok
-(
-fh
-.
-entryExists
+checkForSave
 (
 "
 test9
@@ -3305,7 +3237,6 @@ test9
 "
 savedValue
 "
-)
 "
 checking
 saved
@@ -3318,11 +3249,7 @@ break
 case
 110
 :
-ok
-(
-fh
-.
-entryExists
+checkForSave
 (
 "
 test10
@@ -3330,7 +3257,6 @@ test10
 "
 savedValue
 "
-)
 "
 checking
 saved
@@ -3369,7 +3295,7 @@ save
 password
 notification
 .
-Tempoarily
+Temporarily
 /
 /
 disable
@@ -3417,8 +3343,10 @@ rememberSignons
 ;
 /
 /
-Form
+Forms
 20
+and
+21
 requires
 browser
 .
@@ -3428,63 +3356,6 @@ saveHttpsForms
 to
 be
 false
-/
-/
-Run
-a
-couple
-subtests
-here
-which
-submit
-forms
-from
-an
-HTTPS
-origin
-/
-/
-these
-are
-loaded
-in
-iframes
-since
-the
-test
-suite
-isn
-'
-t
-HTTPS
-.
-The
-subtest
-/
-/
-before
-the
-pref
-change
-should
-save
-a
-value
-the
-(
-same
-)
-subtest
-run
-after
-/
-/
-the
-pref
-change
-should
-not
-.
 if
 (
 formNum
@@ -3492,71 +3363,6 @@ formNum
 =
 19
 )
-{
-ok
-(
-true
-"
-submitting
-subtest1
-"
-)
-;
-var
-iframe
-=
-document
-.
-getElementById
-(
-"
-iframe1
-"
-)
-;
-iframe
-.
-contentDocument
-.
-forms
-[
-0
-]
-.
-submit
-(
-)
-;
-ok
-(
-fh
-.
-entryExists
-(
-"
-subtest1
-"
-"
-subtestValue
-"
-)
-"
-checking
-saved
-subtest
-value
-"
-)
-;
-fh
-.
-removeEntriesForName
-(
-"
-subtest1
-"
-)
-;
 prefBranch
 .
 setBoolPref
@@ -3571,68 +3377,23 @@ saveHttpsForms
 false
 )
 ;
-ok
-(
-true
-"
-submitting
-subtest1
-"
-)
-;
-iframe
-=
-document
-.
-getElementById
-(
-"
-iframe2
-"
-)
-;
-iframe
-.
-contentDocument
-.
-forms
-[
-0
-]
-.
-submit
-(
-)
-;
-ok
-(
-!
-fh
-.
-entryExists
-(
-"
-subtest1
-"
-"
-subtestValue
-"
-)
-"
-checking
-unsaved
-subtest
-value
-"
-)
-;
-}
+/
+/
+Reset
+preference
+now
+that
+20
+and
+21
+are
+over
 if
 (
 formNum
 =
 =
-20
+21
 )
 prefBranch
 .
@@ -3754,7 +3515,7 @@ formNum
 is
 (
 numSubmittedForms
-30
+32
 "
 Ensuring
 all
@@ -3762,6 +3523,22 @@ forms
 were
 submitted
 .
+"
+)
+;
+Services
+.
+obs
+.
+removeObserver
+(
+checkObserver
+"
+satchel
+-
+storage
+-
+changed
 "
 )
 ;
@@ -3786,34 +3563,229 @@ submission
 }
 /
 /
-submit
-the
-next
-form
-.
-var
+This
+timeout
+is
+here
+so
+that
 button
-=
-getFormSubmitButton
+.
+click
 (
+)
+is
+never
+called
+before
+this
+/
+/
+function
+returns
+.
+If
+button
+.
+click
+(
+)
+is
+called
+before
+returning
+a
+long
+/
+/
+chain
+of
+submits
+will
+happen
+recursively
+since
+the
+submit
+is
+dispatched
+/
+/
+immediately
+.
+/
+/
+/
+/
+This
+in
+itself
+is
+fine
+but
+if
+there
+are
+errors
+in
+the
+code
+mochitests
+/
+/
+will
+in
+some
+cases
+give
+you
+"
+server
+too
+busy
+"
+which
+is
+hard
+to
+debug
+!
+/
+/
+setTimeout
+(
+function
+(
+)
+{
+checkObserver
+.
+waitForChecks
+(
+function
+(
+)
+{
+netscape
+.
+security
+.
+PrivilegeManager
+.
+enablePrivilege
+(
+'
+UniversalXPConnect
+'
+)
+;
+var
+nextFormNum
+=
 formNum
 =
 =
-20
+21
 ?
-101
+100
 :
 (
 formNum
 +
 1
 )
+;
+/
+/
+Submit
+the
+next
+form
+.
+Special
+cases
+are
+Forms
+21
+and
+100
+which
+happen
+/
+/
+from
+an
+HTTPS
+domain
+in
+an
+iframe
+.
+if
+(
+nextFormNum
+=
+=
+21
+|
+|
+nextFormNum
+=
+=
+100
+)
+{
+ok
+(
+true
+"
+submitting
+iframe
+test
+"
++
+nextFormNum
+)
+;
+document
+.
+getElementById
+(
+"
+iframe
+"
+)
+.
+contentWindow
+.
+clickButton
+(
+nextFormNum
+)
+;
+}
+else
+{
+var
+button
+=
+getFormSubmitButton
+(
+nextFormNum
 )
 ;
 button
 .
 click
 (
+)
+;
+}
+}
+)
+;
+}
+0
 )
 ;
 return
@@ -3825,118 +3797,6 @@ cancel
 current
 form
 submission
-}
-function
-getFormSubmitButton
-(
-formNum
-)
-{
-var
-form
-=
-(
-"
-form
-"
-+
-formNum
-)
-;
-/
-/
-by
-id
-not
-name
-ok
-(
-form
-!
-=
-null
-"
-getting
-form
-"
-+
-formNum
-)
-;
-/
-/
-we
-can
-'
-t
-just
-call
-form
-.
-submit
-(
-)
-because
-that
-doesn
-'
-t
-seem
-to
-/
-/
-invoke
-the
-form
-onsubmit
-handler
-.
-var
-button
-=
-form
-.
-firstChild
-;
-while
-(
-button
-&
-&
-button
-.
-type
-!
-=
-"
-submit
-"
-)
-{
-button
-=
-button
-.
-nextSibling
-;
-}
-ok
-(
-button
-!
-=
-null
-"
-getting
-form
-submit
-button
-"
-)
-;
-return
-button
-;
 }
 netscape
 .
@@ -4022,6 +3882,23 @@ Components
 interfaces
 .
 nsIPrefBranch
+)
+;
+Services
+.
+obs
+.
+addObserver
+(
+checkObserver
+"
+satchel
+-
+storage
+-
+changed
+"
+false
 )
 ;
 window
