--- a/toolkit/components/satchel/test/test_form_submission_cap.html
+++ b/toolkit/components/satchel/test/test_form_submission_cap.html
@@ -571,11 +571,7 @@ check
 all
 but
 last
-ok
-(
-fh
-.
-entryExists
+checkForSave
 (
 "
 test
@@ -583,7 +579,6 @@ test
 +
 i
 i
-)
 "
 checking
 saved
@@ -594,41 +589,6 @@ i
 )
 ;
 }
-/
-/
-make
-sure
-that
-the
-remaining
-changed
-fields
-are
-not
-saved
-ok
-(
-!
-fh
-.
-entryExists
-(
-"
-test
-"
-+
-numInputFields
-numInputFields
-)
-"
-checking
-unsaved
-value
-"
-+
-numInputFields
-)
-;
 /
 /
 End
@@ -661,6 +621,22 @@ submitted
 "
 )
 ;
+Services
+.
+obs
+.
+removeObserver
+(
+checkObserver
+"
+satchel
+-
+storage
+-
+changed
+"
+)
+;
 SimpleTest
 .
 finish
@@ -680,6 +656,14 @@ current
 form
 submission
 }
+checkObserver
+.
+waitForChecks
+(
+function
+(
+)
+{
 /
 /
 submit
@@ -703,6 +687,9 @@ click
 (
 )
 ;
+}
+)
+;
 return
 false
 ;
@@ -712,118 +699,6 @@ cancel
 current
 form
 submission
-}
-function
-getFormSubmitButton
-(
-formNum
-)
-{
-var
-form
-=
-(
-"
-form
-"
-+
-formNum
-)
-;
-/
-/
-by
-id
-not
-name
-ok
-(
-form
-!
-=
-null
-"
-getting
-form
-"
-+
-formNum
-)
-;
-/
-/
-we
-can
-'
-t
-just
-call
-form
-.
-submit
-(
-)
-because
-that
-doesn
-'
-t
-seem
-to
-/
-/
-invoke
-the
-form
-onsubmit
-handler
-.
-var
-button
-=
-form
-.
-firstChild
-;
-while
-(
-button
-&
-&
-button
-.
-type
-!
-=
-"
-submit
-"
-)
-{
-button
-=
-button
-.
-nextSibling
-;
-}
-ok
-(
-button
-!
-=
-null
-"
-getting
-form
-submit
-button
-"
-)
-;
-return
-button
-;
 }
 netscape
 .
@@ -887,6 +762,23 @@ window
 onload
 =
 startTest
+;
+Services
+.
+obs
+.
+addObserver
+(
+checkObserver
+"
+satchel
+-
+storage
+-
+changed
+"
+false
+)
 ;
 SimpleTest
 .
