--- a/toolkit/components/satchel/test/test_form_submission_cap2.html
+++ b/toolkit/components/satchel/test/test_form_submission_cap2.html
@@ -2291,11 +2291,7 @@ field
 numInputFields
 was
 saved
-ok
-(
-fh
-.
-entryExists
+checkForSave
 (
 "
 test
@@ -2307,7 +2303,6 @@ numInputFields
 "
 changed
 "
-)
 "
 checking
 saved
@@ -2349,6 +2344,22 @@ submitted
 "
 )
 ;
+Services
+.
+obs
+.
+removeObserver
+(
+checkObserver
+"
+satchel
+-
+storage
+-
+changed
+"
+)
+;
 SimpleTest
 .
 finish
@@ -2368,6 +2379,14 @@ current
 form
 submission
 }
+checkObserver
+.
+waitForChecks
+(
+function
+(
+)
+{
 /
 /
 submit
@@ -2391,6 +2410,9 @@ click
 (
 )
 ;
+}
+)
+;
 return
 false
 ;
@@ -2400,118 +2422,6 @@ cancel
 current
 form
 submission
-}
-function
-getFormSubmitButton
-(
-formNum
-)
-{
-var
-form
-=
-(
-"
-form
-"
-+
-formNum
-)
-;
-/
-/
-by
-id
-not
-name
-ok
-(
-form
-!
-=
-null
-"
-getting
-form
-"
-+
-formNum
-)
-;
-/
-/
-we
-can
-'
-t
-just
-call
-form
-.
-submit
-(
-)
-because
-that
-doesn
-'
-t
-seem
-to
-/
-/
-invoke
-the
-form
-onsubmit
-handler
-.
-var
-button
-=
-form
-.
-firstChild
-;
-while
-(
-button
-&
-&
-button
-.
-type
-!
-=
-"
-submit
-"
-)
-{
-button
-=
-button
-.
-nextSibling
-;
-}
-ok
-(
-button
-!
-=
-null
-"
-getting
-form
-submit
-button
-"
-)
-;
-return
-button
-;
 }
 netscape
 .
@@ -2575,6 +2485,23 @@ window
 onload
 =
 startTest
+;
+Services
+.
+obs
+.
+addObserver
+(
+checkObserver
+"
+satchel
+-
+storage
+-
+changed
+"
+false
+)
 ;
 SimpleTest
 .
