Bug 583145 - Theme the Web Console filter bar appropriately on the Mac r=dietrich a=dietrich
UltraBlame original commit: dce14e8e8a5baaafc569823f84c585c5e1ed8994

--- a/toolkit/themes/pinstripe/global/headsUpDisplay.css
+++ b/toolkit/themes/pinstripe/global/headsUpDisplay.css
@@ -1,3 +1,8 @@
+%
+include
+shared
+.
+inc
 .
 hud
 -
@@ -630,10 +635,31 @@ filter
 -
 toolbar
 {
+background
+:
+scopeBarBackground
+!
+important
+;
+border
+-
+bottom
+:
+scopeBarSeparatorBorder
+;
 padding
 :
-1px
 0px
+1px
+;
+-
+moz
+-
+appearance
+:
+none
+!
+important
 ;
 -
 moz
