Bug 587999 - Knock "Move This Tab To..." context menu item into shape. r=gavin, ui-r=faaborg
UltraBlame original commit: 71030e9b7317189ab33d99ee8b3d8e3bf8c9f659

--- a/browser/themes/pinstripe/browser/browser.css
+++ b/browser/themes/pinstripe/browser/browser.css
@@ -15852,44 +15852,18 @@ padding
 ;
 }
 #
-context_tabViewMenu
-{
-list
--
-style
--
-image
-:
-url
-(
-chrome
-:
-/
-/
-browser
-/
-skin
-/
-tabview
-/
-tabview
--
-16
-.
-png
-)
-;
-}
-#
 context_tabViewMenuPopup
 >
 menuitem
 .
 group
 {
+-
+moz
+-
 padding
 -
-left
+start
 :
 40px
 ;
