--- a/browser/themes/gnomestripe/browser/browser.css
+++ b/browser/themes/gnomestripe/browser/browser.css
@@ -11000,44 +11000,18 @@ opacity
 ;
 }
 #
-context_tabViewMenu
-{
-list
--
-style
--
-image
-:
-url
-(
-chrome
-:
-/
-/
-browser
-/
-skin
-/
-tabview
-/
-tabview
--
-16
-.
-png
-)
-;
-}
-#
 context_tabViewMenuPopup
 >
 menuitem
 .
 group
 {
+-
+moz
+-
 padding
 -
-left
+start
 :
 40px
 ;
