CSS formatting cleanup
UltraBlame original commit: 835a42d948bc90d0e3317f9906beaa72280c857a

--- a/browser/themes/winstripe/browser/preferences/preferences.css
+++ b/browser/themes/winstripe/browser/preferences/preferences.css
@@ -53,11 +53,12 @@ region
 :
 rect
 (
-0px
+0
 32px
 32px
-0px
+0
 )
+;
 }
 radio
 [
@@ -93,8 +94,9 @@ rect
 32px
 32px
 64px
-0px
+0
 )
+;
 }
 radio
 [
@@ -112,11 +114,12 @@ region
 :
 rect
 (
-0px
+0
 64px
 32px
 32px
 )
+;
 }
 radio
 [
@@ -154,6 +157,7 @@ rect
 64px
 32px
 )
+;
 }
 radio
 [
@@ -171,11 +175,12 @@ region
 :
 rect
 (
-0px
+0
 96px
 32px
 64px
 )
+;
 }
 radio
 [
@@ -213,6 +218,7 @@ rect
 64px
 64px
 )
+;
 }
 radio
 [
@@ -230,11 +236,12 @@ region
 :
 rect
 (
-0px
+0
 128px
 32px
 96px
 )
+;
 }
 radio
 [
@@ -272,6 +279,7 @@ rect
 64px
 96px
 )
+;
 }
 radio
 [
@@ -289,11 +297,12 @@ region
 :
 rect
 (
-0px
+0
 160px
 32px
 128px
 )
+;
 }
 radio
 [
@@ -331,6 +340,7 @@ rect
 64px
 128px
 )
+;
 }
 radio
 [
@@ -348,11 +358,12 @@ region
 :
 rect
 (
-0px
+0
 192px
 32px
 160px
 )
+;
 }
 radio
 [
@@ -390,6 +401,7 @@ rect
 64px
 160px
 )
+;
 }
 radio
 [
@@ -407,11 +419,12 @@ region
 :
 rect
 (
-0px
+0
 224px
 32px
 192px
 )
+;
 }
 radio
 [
@@ -449,6 +462,7 @@ rect
 64px
 192px
 )
+;
 }
 %
 ifdef
@@ -576,7 +590,7 @@ prefpane
 {
 padding
 :
-0px
+0
 ;
 }
 .
@@ -587,7 +601,6 @@ margin
 9px
 8px
 5px
-8px
 ;
 }
 .
@@ -595,10 +608,9 @@ actionButtons
 {
 margin
 :
-0px
+0
 3px
 6px
-3px
 !
 important
 ;
@@ -627,7 +639,7 @@ height
 ;
 margin
 :
-0px
+0
 2px
 ;
 list
@@ -668,10 +680,10 @@ region
 :
 rect
 (
-0px
+0
 16px
 16px
-0px
+0
 )
 ;
 }
@@ -699,7 +711,7 @@ region
 :
 rect
 (
-0px
+0
 32px
 16px
 16px
@@ -754,7 +766,7 @@ border
 -
 radius
 :
-0px
+0
 ;
 margin
 :
@@ -762,7 +774,7 @@ margin
 ;
 padding
 :
-0px
+0
 ;
 }
 #
