--- a/toolkit/themes/pinstripe/global/dialog.css
+++ b/toolkit/themes/pinstripe/global/dialog.css
@@ -91,8 +91,7 @@ dialogheader
 {
 margin
 :
-0px
-5px
+0
 5px
 5px
 ;
@@ -109,7 +108,7 @@ title
 {
 margin
 :
-0px
+0
 !
 important
 ;
@@ -155,8 +154,23 @@ margin
 padding
 :
 12px
+;
+-
+moz
+-
+padding
+-
+end
+:
 5px
-12px
+;
+-
+moz
+-
+padding
+-
+start
+:
 25px
 ;
 }
