--- a/toolkit/themes/pinstripe/global/wizard.css
+++ b/toolkit/themes/pinstripe/global/wizard.css
@@ -68,7 +68,7 @@ box
 color
 :
 #
-000000
+000
 ;
 }
 .
@@ -82,8 +82,6 @@ text
 {
 padding
 :
-6px
-10px
 6px
 10px
 ;
@@ -128,10 +126,32 @@ box
 icon
 {
 margin
+-
+top
 :
 3px
+;
+-
+moz
+-
+margin
+-
+end
+:
 20px
+margin
+-
+bottom
+:
 0
+;
+-
+moz
+-
+margin
+-
+start
+:
 3px
 ;
 }
@@ -214,7 +234,7 @@ bottom
 1px
 solid
 #
-FFFFFF
+fff
 !
 important
 ;
@@ -229,7 +249,6 @@ btm
 padding
 :
 3px
-6px
 6px
 6px
 ;
