--- a/browser/themes/pinstripe/browser/preferences/preferences.css
+++ b/browser/themes/pinstripe/browser/preferences/preferences.css
@@ -69,6 +69,7 @@ rect
 32px
 0px
 )
+;
 }
 radio
 [
@@ -103,6 +104,7 @@ rect
 64px
 0px
 )
+;
 }
 radio
 [
@@ -747,7 +749,6 @@ tabpanels
 padding
 :
 18px
-10px
 10px
 10px
 ;
