Bug 546857 Part 3: Make error pages not use xul buttons. r=dao a=blocker
UltraBlame original commit: 61fd19a4587f89ab75f259e0742de56eb94f57f7

--- a/browser/components/certerror/content/aboutCertError.xhtml
+++ b/browser/components/certerror/content/aboutCertError.xhtml
@@ -2213,44 +2213,13 @@ content
 p
 >
 <
-xul
-:
 button
-xmlns
-:
-xul
-=
-'
-http
-:
-/
-/
-www
-.
-mozilla
-.
-org
-/
-keymaster
-/
-gatekeeper
-/
-there
-.
-is
-.
-only
-.
-xul
-'
 id
 =
 '
 getMeOutOfHereButton
 '
-label
-=
-'
+>
 &
 certerror
 .
@@ -2258,8 +2227,9 @@ getMeOutOfHere
 .
 label
 ;
-'
+<
 /
+button
 >
 <
 /
@@ -2430,44 +2400,13 @@ contentPara2
 p
 >
 <
-xul
-:
 button
-xmlns
-:
-xul
-=
-'
-http
-:
-/
-/
-www
-.
-mozilla
-.
-org
-/
-keymaster
-/
-gatekeeper
-/
-there
-.
-is
-.
-only
-.
-xul
-'
 id
 =
 '
 exceptionDialogButton
 '
-label
-=
-'
+>
 &
 certerror
 .
@@ -2475,8 +2414,9 @@ addException
 .
 label
 ;
-'
+<
 /
+button
 >
 <
 /
