--- a/browser/components/privatebrowsing/content/aboutPrivateBrowsing.xhtml
+++ b/browser/components/privatebrowsing/content/aboutPrivateBrowsing.xhtml
@@ -1395,47 +1395,11 @@ showNormal
 >
 <
 button
-xmlns
-=
-"
-http
-:
-/
-/
-www
-.
-mozilla
-.
-org
-/
-keymaster
-/
-gatekeeper
-/
-there
-.
-is
-.
-only
-.
-xul
-"
 id
 =
 "
 startPrivateBrowsing
 "
-label
-=
-"
-&
-privatebrowsingpage
-.
-startPrivateBrowsing
-.
-label
-;
-"
 accesskey
 =
 "
@@ -1447,7 +1411,17 @@ startPrivateBrowsing
 accesskey
 ;
 "
+>
+&
+privatebrowsingpage
+.
+startPrivateBrowsing
+.
+label
+;
+<
 /
+button
 >
 <
 /
