--- a/browser/components/safebrowsing/content/blockedSite.xhtml
+++ b/browser/components/safebrowsing/content/blockedSite.xhtml
@@ -1723,44 +1723,13 @@ js
 -
 >
 <
-xul
-:
 button
-xmlns
-:
-xul
-=
-"
-http
-:
-/
-/
-www
-.
-mozilla
-.
-org
-/
-keymaster
-/
-gatekeeper
-/
-there
-.
-is
-.
-only
-.
-xul
-"
 id
 =
 "
 getMeOutButton
 "
-label
-=
-"
+>
 &
 safeb
 .
@@ -1770,48 +1739,18 @@ accept
 .
 label
 ;
-"
+<
 /
+button
 >
 <
-xul
-:
 button
-xmlns
-:
-xul
-=
-"
-http
-:
-/
-/
-www
-.
-mozilla
-.
-org
-/
-keymaster
-/
-gatekeeper
-/
-there
-.
-is
-.
-only
-.
-xul
-"
 id
 =
 "
 reportButton
 "
-label
-=
-"
+>
 &
 safeb
 .
@@ -1821,8 +1760,9 @@ reportPage
 .
 label
 ;
-"
+<
 /
+button
 >
 <
 /
@@ -1841,44 +1781,13 @@ ignoreWarning
 "
 >
 <
-xul
-:
 button
-xmlns
-:
-xul
-=
-"
-http
-:
-/
-/
-www
-.
-mozilla
-.
-org
-/
-keymaster
-/
-gatekeeper
-/
-there
-.
-is
-.
-only
-.
-xul
-"
 id
 =
 "
 ignoreWarningButton
 "
-label
-=
-"
+>
 &
 safeb
 .
@@ -1888,8 +1797,9 @@ decline
 .
 label
 ;
-"
+<
 /
+button
 >
 <
 /
