--- a/browser/components/feeds/content/subscribe.xhtml
+++ b/browser/components/feeds/content/subscribe.xhtml
@@ -158,33 +158,6 @@ org
 /
 xhtml
 "
-xmlns
-:
-xul
-=
-"
-http
-:
-/
-/
-www
-.
-mozilla
-.
-org
-/
-keymaster
-/
-gatekeeper
-/
-there
-.
-is
-.
-only
-.
-xul
-"
 >
 <
 head
@@ -218,6 +191,44 @@ chrome
 browser
 /
 skin
+/
+feeds
+/
+subscribe
+.
+css
+"
+type
+=
+"
+text
+/
+css
+"
+media
+=
+"
+all
+"
+/
+>
+<
+link
+rel
+=
+"
+stylesheet
+"
+href
+=
+"
+chrome
+:
+/
+/
+browser
+/
+content
 /
 feeds
 /
@@ -350,252 +361,12 @@ feedSubscriptionInfo2
 div
 >
 <
-!
--
--
-XXXmano
-this
-can
-'
-t
-have
-any
-whitespace
-in
-it
-.
-Otherwise
-you
-would
-see
-how
-much
-XUL
--
-in
--
-XHTML
-sucks
-see
-bug
-348830
--
--
->
-<
 div
 id
 =
 "
 feedSubscribeLine
 "
->
-<
-xul
-:
-vbox
->
-<
-xul
-:
-hbox
-align
-=
-"
-center
-"
->
-<
-xul
-:
-description
-id
-=
-"
-subscribeUsingDescription
-"
-/
->
-<
-xul
-:
-menulist
-id
-=
-"
-handlersMenuList
-"
-aria
--
-labelledby
-=
-"
-subscribeUsingDescription
-"
->
-<
-xul
-:
-menupopup
-menugenerated
-=
-"
-true
-"
-id
-=
-"
-handlersMenuPopup
-"
->
-<
-xul
-:
-menuitem
-id
-=
-"
-liveBookmarksMenuItem
-"
-label
-=
-"
-&
-feedLiveBookmarks
-;
-"
-class
-=
-"
-menuitem
--
-iconic
-"
-image
-=
-"
-chrome
-:
-/
-/
-browser
-/
-skin
-/
-page
--
-livemarks
-.
-png
-"
-selected
-=
-"
-true
-"
-/
->
-<
-xul
-:
-menuseparator
-/
->
-<
-/
-xul
-:
-menupopup
->
-<
-/
-xul
-:
-menulist
->
-<
-/
-xul
-:
-hbox
->
-<
-xul
-:
-hbox
->
-<
-xul
-:
-checkbox
-id
-=
-"
-alwaysUse
-"
-checked
-=
-"
-false
-"
-/
->
-<
-/
-xul
-:
-hbox
->
-<
-xul
-:
-hbox
-align
-=
-"
-center
-"
->
-<
-xul
-:
-spacer
-flex
-=
-"
-1
-"
-/
->
-<
-xul
-:
-button
-label
-=
-"
-&
-feedSubscribeNow
-;
-"
-id
-=
-"
-subscribeButton
-"
-/
->
-<
-/
-xul
-:
-hbox
->
-<
-/
-xul
-:
-vbox
 >
 <
 /
