Bug 588464 - Adjustments for touch enabled displays should keep using physical units. r=felipe
UltraBlame original commit: 48f1def5720a67a606e90437838624d55182271f

--- a/browser/themes/winstripe/browser/browser.css
+++ b/browser/themes/winstripe/browser/browser.css
@@ -6298,8 +6298,9 @@ min
 -
 width
 :
+6
 .
-64cm
+4mozmm
 ;
 }
 #
@@ -7755,8 +7756,9 @@ min
 -
 height
 :
+7
 .
-73cm
+3mozmm
 ;
 }
 .
@@ -9242,8 +9244,9 @@ min
 -
 width
 :
+8
 .
-81cm
+1mozmm
 ;
 }
 .
@@ -9257,7 +9260,7 @@ min
 -
 width
 :
-1cm
+10mozmm
 ;
 }
 }
