Bug 546857 Part 4b: Fix some errors in previous patch to not use XUL on error pages. r=dao a=blocker
UltraBlame original commit: baff7b7b32bc3dd7132cddd3957f6898b5bebfaf

--- a/browser/components/privatebrowsing/content/aboutPrivateBrowsing.xhtml
+++ b/browser/components/privatebrowsing/content/aboutPrivateBrowsing.xhtml
@@ -1121,6 +1121,20 @@ browsing
 false
 )
 ;
+function
+togglePrivateBrowsing
+(
+)
+{
+mainWindow
+.
+gPrivateBrowsingUI
+.
+toggleMode
+(
+)
+;
+}
 ]
 ]
 >
@@ -1395,23 +1409,39 @@ showNormal
 >
 <
 button
+xmlns
+=
+"
+http
+:
+/
+/
+www
+.
+mozilla
+.
+org
+/
+keymaster
+/
+gatekeeper
+/
+there
+.
+is
+.
+only
+.
+xul
+"
 id
 =
 "
 startPrivateBrowsing
 "
-accesskey
+label
 =
 "
-&
-privatebrowsingpage
-.
-startPrivateBrowsing
-.
-accesskey
-;
-"
->
 &
 privatebrowsingpage
 .
@@ -1419,9 +1449,27 @@ startPrivateBrowsing
 .
 label
 ;
-<
+"
+accesskey
+=
+"
+&
+privatebrowsingpage
+.
+startPrivateBrowsing
+.
+accesskey
+;
+"
+oncommand
+=
+"
+togglePrivateBrowsing
+(
+)
+;
+"
 /
-button
 >
 <
 /
