Backout of changesets c866e73f3209 and baff7b7b32bc because of sicking's push-and-run bustage. a=backout
UltraBlame original commit: ee6fb954cbc3de0f76e84cad6bdff452116e1b03

--- a/browser/components/privatebrowsing/content/aboutPrivateBrowsing.xhtml
+++ b/browser/components/privatebrowsing/content/aboutPrivateBrowsing.xhtml
@@ -1121,20 +1121,6 @@ browsing
 false
 )
 ;
-function
-togglePrivateBrowsing
-(
-)
-{
-mainWindow
-.
-gPrivateBrowsingUI
-.
-toggleMode
-(
-)
-;
-}
 ]
 ]
 >
@@ -1409,47 +1395,11 @@ showNormal
 >
 <
 button
-xmlns
-=
-"
-http
-:
-/
-/
-www
-.
-mozilla
-.
-org
-/
-keymaster
-/
-gatekeeper
-/
-there
-.
-is
-.
-only
-.
-xul
-"
 id
 =
 "
 startPrivateBrowsing
 "
-label
-=
-"
-&
-privatebrowsingpage
-.
-startPrivateBrowsing
-.
-label
-;
-"
 accesskey
 =
 "
@@ -1461,15 +1411,17 @@ startPrivateBrowsing
 accesskey
 ;
 "
-oncommand
-=
-"
-togglePrivateBrowsing
-(
-)
+>
+&
+privatebrowsingpage
+.
+startPrivateBrowsing
+.
+label
 ;
-"
+<
 /
+button
 >
 <
 /
