Bug 589163 - Fix duplicate ids in browser.xul, make ids for appmenu items more consistent and add missing split-menuitem-item classes. r=gavin
UltraBlame original commit: 8280bf7b49aadd9dcdabf5b5817065d58a497df7

--- a/browser/themes/winstripe/browser/browser.css
+++ b/browser/themes/winstripe/browser/browser.css
@@ -1479,7 +1479,7 @@ italic
 ;
 }
 #
-appmenu_BookmarkItem
+appmenu_bookmarks
 {
 list
 -
@@ -1552,9 +1552,7 @@ png
 ;
 }
 #
-appmenuBookmarkMenu_unsorted
--
-menuitem
+appmenu_unsortedBookmarks
 {
 list
 -
@@ -1614,11 +1612,7 @@ png
 ;
 }
 #
-appmenu
--
-button
-#
-subscribeToPageMenuitem
+appmenu_subscribeToPage
 :
 not
 (
@@ -1627,18 +1621,7 @@ disabled
 ]
 )
 #
-appmenu
--
-button
-#
-subscribeToPageMenupopup
-:
-not
-(
-[
-hidden
-]
-)
+appmenu_subscribeToPageMenu
 {
 list
 -
@@ -1686,7 +1669,7 @@ rect
 ;
 }
 #
-appmenuBookmarkThisPage
+appmenu_bookmarkThisPage
 {
 list
 -
