--- a/toolkit/mozapps/extensions/content/extensions.css
+++ b/toolkit/mozapps/extensions/content/extensions.css
@@ -105,6 +105,15 @@ installed
 -
 moz
 -
+box
+-
+orient
+:
+vertical
+;
+-
+moz
+-
 binding
 :
 url
@@ -173,10 +182,10 @@ installing
 .
 addon
 [
-status
+pending
 =
 "
-uninstalled
+uninstall
 "
 ]
 {
@@ -358,44 +367,6 @@ visibility
 hidden
 ;
 }
-.
-addon
-[
-active
-=
-"
-true
-"
-]
-.
-disabled
--
-postfix
-{
-display
-:
-none
-;
-}
-.
-addon
-[
-incompatible
-=
-"
-false
-"
-]
-.
-incompatible
--
-warning
-{
-display
-:
-none
-;
-}
 #
 search
 -
@@ -450,6 +421,62 @@ addon
 not
 (
 [
+notification
+=
+"
+warning
+"
+]
+)
+.
+warning
+.
+addon
+:
+not
+(
+[
+notification
+=
+"
+error
+"
+]
+)
+.
+error
+.
+addon
+:
+not
+(
+[
+notification
+=
+"
+info
+"
+]
+)
+.
+info
+.
+addon
+:
+not
+(
+[
+pending
+]
+)
+.
+pending
+.
+addon
+:
+not
+(
+[
 upgrade
 =
 "
@@ -461,12 +488,45 @@ true
 update
 -
 postfix
-{
-display
-:
-none
-;
-}
+.
+addon
+[
+active
+=
+"
+true
+"
+]
+.
+disabled
+-
+postfix
+.
+addon
+[
+pending
+=
+"
+install
+"
+]
+.
+update
+-
+postfix
+.
+addon
+[
+pending
+=
+"
+install
+"
+]
+.
+disabled
+-
+postfix
 #
 detail
 -
