Bug 585960: Implement the overall theme changes. r=Unfocused, a=blocking-beta5
UltraBlame original commit: 307a672ee758696684ef4e4c2c0c10deb10abc43

--- a/toolkit/mozapps/extensions/content/extensions.css
+++ b/toolkit/mozapps/extensions/content/extensions.css
@@ -1,3 +1,30 @@
+namespace
+xhtml
+"
+http
+:
+/
+/
+www
+.
+w3
+.
+org
+/
+1999
+/
+xhtml
+"
+;
+xhtml
+|
+link
+{
+display
+:
+none
+;
+}
 #
 categories
 {
