--- a/toolkit/themes/gnomestripe/mozapps/extensions/extensions.css
+++ b/toolkit/themes/gnomestripe/mozapps/extensions/extensions.css
@@ -1,61 +1,49 @@
-.
-pane
+#
+addons
 -
-splitter
+page
 {
+margin
+:
+20px
+20px
+;
+}
+#
+view
+-
+port
+{
+background
+-
+color
+:
 -
 moz
 -
-appearance
-:
-none
+field
 ;
-border
+color
 :
-none
-;
 -
 moz
 -
+fieldtext
+;
 border
--
-start
 :
 1px
 solid
-#
-A8A8A8
+black
 ;
-background
 -
-color
+moz
+-
+border
+-
+radius
 :
-transparent
-;
-background
--
-image
-:
-none
-;
-min
--
-width
-:
-1px
-;
-}
-.
-view
--
-pane
-{
-background
--
-color
-:
-#
-FFF
+5px
 ;
 }
 #
@@ -72,24 +60,65 @@ border
 :
 none
 ;
+-
+moz
+-
 margin
+-
+end
 :
-0px
+-
+1px
+;
+background
+-
+color
+:
+transparent
+;
+position
+:
+relative
 ;
 }
 .
 category
 {
-border
-:
-none
-;
 -
 moz
 -
 appearance
 :
 none
+;
+border
+-
+width
+:
+1px
+;
+-
+moz
+-
+border
+-
+end
+-
+width
+:
+0
+;
+border
+-
+style
+:
+solid
+;
+border
+-
+color
+:
+transparent
 ;
 padding
 :
@@ -114,6 +143,78 @@ min
 height
 :
 0px
+;
+}
+.
+category
+:
+-
+moz
+-
+locale
+-
+dir
+(
+ltr
+)
+{
+-
+moz
+-
+border
+-
+radius
+-
+topleft
+:
+5px
+;
+-
+moz
+-
+border
+-
+radius
+-
+bottomleft
+:
+5px
+;
+}
+.
+category
+:
+-
+moz
+-
+locale
+-
+dir
+(
+rtl
+)
+{
+-
+moz
+-
+border
+-
+radius
+-
+topright
+:
+5px
+;
+-
+moz
+-
+border
+-
+radius
+-
+bottomright
+:
+5px
 ;
 }
 .
@@ -198,25 +299,25 @@ selected
 {
 background
 -
-image
+color
 :
 -
 moz
 -
-linear
--
-gradient
-(
-#
-8AA7CA
-#
-446490
-)
+field
 ;
 color
 :
-#
-FFF
+-
+moz
+-
+fieldtext
+;
+border
+-
+color
+:
+black
 ;
 }
 .
@@ -667,44 +768,15 @@ png
 #
 header
 {
-background
-:
--
-moz
--
-linear
--
-gradient
-(
-top
-#
-EEE
-#
-AAA
-)
-;
-padding
-:
-8px
-;
 margin
+-
+bottom
 :
-0px
-;
--
-moz
--
-box
--
-align
-:
-center
+20px
 ;
 height
 :
-4
-.
-5em
+2em
 ;
 }
 #
@@ -1109,26 +1181,6 @@ view
 -
 header
 {
-background
-:
--
-moz
--
-linear
--
-gradient
-(
-top
-#
-FFF
-#
-E8E8E8
-50
-%
-#
-FFF
-)
-;
 padding
 :
 4px
@@ -1386,6 +1438,12 @@ margin
 border
 :
 none
+;
+background
+-
+color
+:
+transparent
 ;
 }
 .
@@ -3811,148 +3869,6 @@ font
 weight
 :
 bold
-;
-}
-.
-addon
--
-control
-{
--
-moz
--
-appearance
-:
-none
-;
-padding
-:
-0px
-5px
-;
-border
-:
-1px
-solid
-#
-A2A6AD
-;
--
-moz
--
-border
--
-radius
-:
-100
-%
-;
-background
--
-image
-:
--
-moz
--
-linear
--
-gradient
-(
-#
-F9F9F9
-#
-DFDFDF
-)
-;
-}
-.
-addon
--
-control
-:
-hover
-{
-border
--
-color
-:
-#
-75797F
-;
-}
-.
-addon
--
-control
-.
-enable
-:
-hover
-{
--
-moz
--
-box
--
-shadow
-:
-#
-00FF00
-0px
-0px
-6px
--
-1px
-;
-}
-.
-addon
--
-control
-.
-disable
-:
-hover
-{
--
-moz
--
-box
--
-shadow
-:
-#
-FFD800
-0px
-0px
-6px
--
-1px
-;
-}
-.
-addon
--
-control
-.
-remove
-:
-hover
-{
--
-moz
--
-box
--
-shadow
-:
-#
-FF0000
-0px
-0px
-6px
--
-1px
 ;
 }
 .
