Bug 585922 - Text cursor doesn't follow character input for passwords (encrypted phrases) r=roc a=blocking-fennec2.0b1+
UltraBlame original commit: 8514be744066d8a0f610391548925e1c8d59bd8f

--- a/layout/base/tests/test_reftests_with_caret.html
+++ b/layout/base/tests/test_reftests_with_caret.html
@@ -381,6 +381,11 @@ iframe
 )
 }
 ;
+const
+MAX_ITERATIONS
+=
+10
+;
 function
 createIframe
 (
@@ -417,17 +422,89 @@ me
 =
 this
 ;
-iframe
-.
-addEventListener
-(
-"
-load
-"
+var
+currentIteration
+=
+0
+;
 function
+iframeLoadCompleted
 (
 )
 {
+var
+docEl
+=
+iframe
+.
+contentDocument
+.
+documentElement
+;
+if
+(
+docEl
+.
+className
+.
+indexOf
+(
+"
+reftest
+-
+wait
+"
+)
+>
+=
+0
+)
+{
+if
+(
+currentIteration
++
++
+>
+MAX_ITERATIONS
+)
+{
+ok
+(
+false
+"
+iframe
+load
+for
+"
++
+url
++
+"
+timed
+out
+"
+)
+;
+SimpleTest
+.
+finish
+(
+)
+;
+}
+else
+{
+setTimeout
+(
+iframeLoadCompleted
+10
+)
+;
+}
+return
+;
+}
 iframe
 .
 remotePageLoaded
@@ -454,6 +531,14 @@ null
 0
 )
 }
+iframe
+.
+addEventListener
+(
+"
+load
+"
+iframeLoadCompleted
 false
 )
 ;
@@ -640,6 +725,20 @@ html
 bug512295
 -
 2
+-
+ref
+.
+html
+'
+]
+[
+'
+bug585922
+.
+html
+'
+'
+bug585922
 -
 ref
 .
