--- a/browser/themes/winstripe/browser/aboutCertError.css
+++ b/browser/themes/winstripe/browser/aboutCertError.css
@@ -240,6 +240,39 @@ no
 repeat
 ;
 }
+body
+[
+dir
+=
+"
+rtl
+"
+]
+#
+technicalContent
+>
+h2
+body
+[
+dir
+=
+"
+rtl
+"
+]
+#
+expertContent
+>
+h2
+{
+background
+-
+position
+:
+right
+center
+;
+}
 #
 technicalContent
 [
@@ -271,6 +304,61 @@ browser
 skin
 /
 section_collapsed
+.
+png
+"
+)
+;
+}
+body
+[
+dir
+=
+"
+rtl
+"
+]
+#
+technicalContent
+[
+collapsed
+]
+>
+h2
+body
+[
+dir
+=
+"
+rtl
+"
+]
+#
+expertContent
+[
+collapsed
+]
+>
+h2
+{
+background
+-
+image
+:
+url
+(
+"
+chrome
+:
+/
+/
+browser
+/
+skin
+/
+section_collapsed
+-
+rtl
 .
 png
 "
