--- a/toolkit/components/satchel/test/subtst_form_submission_1.html
+++ b/toolkit/components/satchel/test/subtst_form_submission_1.html
@@ -1,36 +1,9 @@
 <
-!
-DOCTYPE
-HTML
->
-<
-html
->
-<
-head
->
-<
-/
-head
->
-<
-body
->
-<
 form
 id
 =
 "
-subform1
-"
-onsubmit
-=
-"
-return
-checkSubmit
-(
-21
-)
+subform
 "
 >
 <
@@ -49,58 +22,6 @@ name
 =
 "
 subtest1
-"
->
-<
-button
-type
-=
-"
-submit
-"
->
-Submit
-<
-/
-button
->
-<
-/
-form
->
-<
-form
-id
-=
-"
-subform2
-"
-onsubmit
-=
-"
-return
-checkSubmit
-(
-100
-)
-"
->
-<
-input
-id
-=
-"
-subtest2
-"
-type
-=
-"
-text
-"
-name
-=
-"
-subtest2
 "
 >
 <
@@ -123,88 +44,6 @@ form
 <
 script
 >
-function
-checkSubmit
-(
-num
-)
-{
-netscape
-.
-security
-.
-PrivilegeManager
-.
-enablePrivilege
-(
-'
-UniversalXPConnect
-'
-)
-;
-return
-parent
-.
-checkSubmit
-(
-num
-)
-;
-}
-function
-clickButton
-(
-num
-)
-{
-if
-(
-num
-=
-=
-21
-)
-document
-.
-querySelectorAll
-(
-"
-button
-"
-)
-[
-0
-]
-.
-click
-(
-)
-;
-else
-if
-(
-num
-=
-=
-100
-)
-document
-.
-querySelectorAll
-(
-"
-button
-"
-)
-[
-1
-]
-.
-click
-(
-)
-;
-}
 /
 /
 set
@@ -242,30 +81,7 @@ value
 subtestValue
 "
 ;
-document
-.
-getElementById
-(
-"
-subtest2
-"
-)
-.
-value
-=
-"
-subtestValue
-"
-;
 <
 /
 script
->
-<
-/
-body
->
-<
-/
-html
 >
