--- a/toolkit/components/satchel/test/test_form_submission.html
+++ b/toolkit/components/satchel/test/test_form_submission.html
@@ -140,43 +140,6 @@ display
 p
 >
 <
-iframe
-id
-=
-"
-iframe
-"
-src
-=
-"
-https
-:
-/
-/
-example
-.
-com
-/
-tests
-/
-toolkit
-/
-components
-/
-satchel
-/
-test
-/
-subtst_form_submission_1
-.
-html
-"
->
-<
-/
-iframe
->
-<
 div
 id
 =
@@ -1822,6 +1785,80 @@ button
 form
 >
 <
+iframe
+id
+=
+"
+iframe1
+"
+src
+=
+"
+https
+:
+/
+/
+example
+.
+com
+/
+tests
+/
+toolkit
+/
+components
+/
+satchel
+/
+test
+/
+subtst_form_submission_1
+.
+html
+"
+>
+<
+/
+iframe
+>
+<
+iframe
+id
+=
+"
+iframe2
+"
+src
+=
+"
+https
+:
+/
+/
+example
+.
+com
+/
+tests
+/
+toolkit
+/
+components
+/
+satchel
+/
+test
+/
+subtst_form_submission_1
+.
+html
+"
+>
+<
+/
+iframe
+>
+<
 form
 id
 =
@@ -2954,9 +2991,6 @@ case
 case
 20
 :
-case
-21
-:
 ok
 (
 !
@@ -2973,31 +3007,25 @@ storage
 ;
 break
 ;
-case
-100
-:
-checkForSave
-(
-"
-subtest2
-"
-"
-subtestValue
-"
-"
-checking
-saved
-subtest
-value
-"
-)
-;
-break
-;
+/
+/
+The
+other
+tests
+do
+save
+data
+.
+.
+.
 case
 101
 :
-checkForSave
+ok
+(
+fh
+.
+entryExists
 (
 "
 test1
@@ -3005,6 +3033,7 @@ test1
 "
 savedValue
 "
+)
 "
 checking
 saved
@@ -3017,7 +3046,11 @@ break
 case
 102
 :
-checkForSave
+ok
+(
+fh
+.
+entryExists
 (
 "
 test2
@@ -3025,6 +3058,7 @@ test2
 "
 savedValue
 "
+)
 "
 checking
 saved
@@ -3037,7 +3071,11 @@ break
 case
 103
 :
-checkForSave
+ok
+(
+fh
+.
+entryExists
 (
 "
 test3
@@ -3045,6 +3083,7 @@ test3
 "
 savedValue
 "
+)
 "
 checking
 saved
@@ -3057,7 +3096,11 @@ break
 case
 104
 :
-checkForSave
+ok
+(
+fh
+.
+entryExists
 (
 "
 test4
@@ -3065,6 +3108,7 @@ test4
 "
 trimTrailingAndLeadingSpace
 "
+)
 "
 checking
 saved
@@ -3082,7 +3126,11 @@ break
 case
 105
 :
-checkForSave
+ok
+(
+fh
+.
+entryExists
 (
 "
 test5
@@ -3090,6 +3138,7 @@ test5
 "
 trimTrailingAndLeadingWhitespace
 "
+)
 "
 checking
 saved
@@ -3107,7 +3156,11 @@ break
 case
 106
 :
-checkForSave
+ok
+(
+fh
+.
+entryExists
 (
 "
 test6
@@ -3115,6 +3168,7 @@ test6
 "
 00000000109181
 "
+)
 "
 checking
 saved
@@ -3148,7 +3202,11 @@ i
 +
 )
 {
-checkForSave
+ok
+(
+fh
+.
+entryExists
 (
 "
 test7_
@@ -3165,6 +3223,7 @@ invalid16
 [
 i
 ]
+)
 "
 checking
 saved
@@ -3199,7 +3258,11 @@ i
 +
 )
 {
-checkForSave
+ok
+(
+fh
+.
+entryExists
 (
 "
 test8_
@@ -3216,6 +3279,7 @@ invalid15
 [
 i
 ]
+)
 "
 checking
 saved
@@ -3229,7 +3293,11 @@ break
 case
 109
 :
-checkForSave
+ok
+(
+fh
+.
+entryExists
 (
 "
 test9
@@ -3237,6 +3305,7 @@ test9
 "
 savedValue
 "
+)
 "
 checking
 saved
@@ -3249,7 +3318,11 @@ break
 case
 110
 :
-checkForSave
+ok
+(
+fh
+.
+entryExists
 (
 "
 test10
@@ -3257,6 +3330,7 @@ test10
 "
 savedValue
 "
+)
 "
 checking
 saved
@@ -3295,7 +3369,7 @@ save
 password
 notification
 .
-Temporarily
+Tempoarily
 /
 /
 disable
@@ -3343,10 +3417,8 @@ rememberSignons
 ;
 /
 /
-Forms
+Form
 20
-and
-21
 requires
 browser
 .
@@ -3356,6 +3428,63 @@ saveHttpsForms
 to
 be
 false
+/
+/
+Run
+a
+couple
+subtests
+here
+which
+submit
+forms
+from
+an
+HTTPS
+origin
+/
+/
+these
+are
+loaded
+in
+iframes
+since
+the
+test
+suite
+isn
+'
+t
+HTTPS
+.
+The
+subtest
+/
+/
+before
+the
+pref
+change
+should
+save
+a
+value
+the
+(
+same
+)
+subtest
+run
+after
+/
+/
+the
+pref
+change
+should
+not
+.
 if
 (
 formNum
@@ -3363,6 +3492,71 @@ formNum
 =
 19
 )
+{
+ok
+(
+true
+"
+submitting
+subtest1
+"
+)
+;
+var
+iframe
+=
+document
+.
+getElementById
+(
+"
+iframe1
+"
+)
+;
+iframe
+.
+contentDocument
+.
+forms
+[
+0
+]
+.
+submit
+(
+)
+;
+ok
+(
+fh
+.
+entryExists
+(
+"
+subtest1
+"
+"
+subtestValue
+"
+)
+"
+checking
+saved
+subtest
+value
+"
+)
+;
+fh
+.
+removeEntriesForName
+(
+"
+subtest1
+"
+)
+;
 prefBranch
 .
 setBoolPref
@@ -3377,23 +3571,68 @@ saveHttpsForms
 false
 )
 ;
-/
-/
-Reset
-preference
-now
-that
-20
-and
-21
-are
-over
+ok
+(
+true
+"
+submitting
+subtest1
+"
+)
+;
+iframe
+=
+document
+.
+getElementById
+(
+"
+iframe2
+"
+)
+;
+iframe
+.
+contentDocument
+.
+forms
+[
+0
+]
+.
+submit
+(
+)
+;
+ok
+(
+!
+fh
+.
+entryExists
+(
+"
+subtest1
+"
+"
+subtestValue
+"
+)
+"
+checking
+unsaved
+subtest
+value
+"
+)
+;
+}
 if
 (
 formNum
 =
 =
-21
+20
 )
 prefBranch
 .
@@ -3515,7 +3754,7 @@ formNum
 is
 (
 numSubmittedForms
-32
+30
 "
 Ensuring
 all
@@ -3523,22 +3762,6 @@ forms
 were
 submitted
 .
-"
-)
-;
-Services
-.
-obs
-.
-removeObserver
-(
-checkObserver
-"
-satchel
--
-storage
--
-changed
 "
 )
 ;
@@ -3563,229 +3786,34 @@ submission
 }
 /
 /
-This
-timeout
-is
-here
-so
-that
-button
-.
-click
-(
-)
-is
-never
-called
-before
-this
-/
-/
-function
-returns
-.
-If
-button
-.
-click
-(
-)
-is
-called
-before
-returning
-a
-long
-/
-/
-chain
-of
-submits
-will
-happen
-recursively
-since
-the
 submit
-is
-dispatched
-/
-/
-immediately
-.
-/
-/
-/
-/
-This
-in
-itself
-is
-fine
-but
-if
-there
-are
-errors
-in
 the
-code
-mochitests
-/
-/
-will
-in
-some
-cases
-give
-you
-"
-server
-too
-busy
-"
-which
-is
-hard
-to
-debug
-!
-/
-/
-setTimeout
-(
-function
-(
-)
-{
-checkObserver
+next
+form
 .
-waitForChecks
-(
-function
-(
-)
-{
-netscape
-.
-security
-.
-PrivilegeManager
-.
-enablePrivilege
-(
-'
-UniversalXPConnect
-'
-)
-;
 var
-nextFormNum
+button
 =
+getFormSubmitButton
+(
 formNum
 =
 =
-21
+20
 ?
-100
+101
 :
 (
 formNum
 +
 1
 )
-;
-/
-/
-Submit
-the
-next
-form
-.
-Special
-cases
-are
-Forms
-21
-and
-100
-which
-happen
-/
-/
-from
-an
-HTTPS
-domain
-in
-an
-iframe
-.
-if
-(
-nextFormNum
-=
-=
-21
-|
-|
-nextFormNum
-=
-=
-100
-)
-{
-ok
-(
-true
-"
-submitting
-iframe
-test
-"
-+
-nextFormNum
-)
-;
-document
-.
-getElementById
-(
-"
-iframe
-"
-)
-.
-contentWindow
-.
-clickButton
-(
-nextFormNum
-)
-;
-}
-else
-{
-var
-button
-=
-getFormSubmitButton
-(
-nextFormNum
 )
 ;
 button
 .
 click
 (
-)
-;
-}
-}
-)
-;
-}
-0
 )
 ;
 return
@@ -3797,6 +3825,118 @@ cancel
 current
 form
 submission
+}
+function
+getFormSubmitButton
+(
+formNum
+)
+{
+var
+form
+=
+(
+"
+form
+"
++
+formNum
+)
+;
+/
+/
+by
+id
+not
+name
+ok
+(
+form
+!
+=
+null
+"
+getting
+form
+"
++
+formNum
+)
+;
+/
+/
+we
+can
+'
+t
+just
+call
+form
+.
+submit
+(
+)
+because
+that
+doesn
+'
+t
+seem
+to
+/
+/
+invoke
+the
+form
+onsubmit
+handler
+.
+var
+button
+=
+form
+.
+firstChild
+;
+while
+(
+button
+&
+&
+button
+.
+type
+!
+=
+"
+submit
+"
+)
+{
+button
+=
+button
+.
+nextSibling
+;
+}
+ok
+(
+button
+!
+=
+null
+"
+getting
+form
+submit
+button
+"
+)
+;
+return
+button
+;
 }
 netscape
 .
@@ -3882,23 +4022,6 @@ Components
 interfaces
 .
 nsIPrefBranch
-)
-;
-Services
-.
-obs
-.
-addObserver
-(
-checkObserver
-"
-satchel
--
-storage
--
-changed
-"
-false
 )
 ;
 window
