--- a/toolkit/components/satchel/test/test_form_submission_cap.html
+++ b/toolkit/components/satchel/test/test_form_submission_cap.html
@@ -571,7 +571,11 @@ check
 all
 but
 last
-checkForSave
+ok
+(
+fh
+.
+entryExists
 (
 "
 test
@@ -579,6 +583,7 @@ test
 +
 i
 i
+)
 "
 checking
 saved
@@ -589,6 +594,41 @@ i
 )
 ;
 }
+/
+/
+make
+sure
+that
+the
+remaining
+changed
+fields
+are
+not
+saved
+ok
+(
+!
+fh
+.
+entryExists
+(
+"
+test
+"
++
+numInputFields
+numInputFields
+)
+"
+checking
+unsaved
+value
+"
++
+numInputFields
+)
+;
 /
 /
 End
@@ -621,22 +661,6 @@ submitted
 "
 )
 ;
-Services
-.
-obs
-.
-removeObserver
-(
-checkObserver
-"
-satchel
--
-storage
--
-changed
-"
-)
-;
 SimpleTest
 .
 finish
@@ -656,14 +680,6 @@ current
 form
 submission
 }
-checkObserver
-.
-waitForChecks
-(
-function
-(
-)
-{
 /
 /
 submit
@@ -687,9 +703,6 @@ click
 (
 )
 ;
-}
-)
-;
 return
 false
 ;
@@ -699,6 +712,118 @@ cancel
 current
 form
 submission
+}
+function
+getFormSubmitButton
+(
+formNum
+)
+{
+var
+form
+=
+(
+"
+form
+"
++
+formNum
+)
+;
+/
+/
+by
+id
+not
+name
+ok
+(
+form
+!
+=
+null
+"
+getting
+form
+"
++
+formNum
+)
+;
+/
+/
+we
+can
+'
+t
+just
+call
+form
+.
+submit
+(
+)
+because
+that
+doesn
+'
+t
+seem
+to
+/
+/
+invoke
+the
+form
+onsubmit
+handler
+.
+var
+button
+=
+form
+.
+firstChild
+;
+while
+(
+button
+&
+&
+button
+.
+type
+!
+=
+"
+submit
+"
+)
+{
+button
+=
+button
+.
+nextSibling
+;
+}
+ok
+(
+button
+!
+=
+null
+"
+getting
+form
+submit
+button
+"
+)
+;
+return
+button
+;
 }
 netscape
 .
@@ -762,23 +887,6 @@ window
 onload
 =
 startTest
-;
-Services
-.
-obs
-.
-addObserver
-(
-checkObserver
-"
-satchel
--
-storage
--
-changed
-"
-false
-)
 ;
 SimpleTest
 .
