--- a/toolkit/components/satchel/test/test_form_submission_cap2.html
+++ b/toolkit/components/satchel/test/test_form_submission_cap2.html
@@ -2291,7 +2291,11 @@ field
 numInputFields
 was
 saved
-checkForSave
+ok
+(
+fh
+.
+entryExists
 (
 "
 test
@@ -2303,6 +2307,7 @@ numInputFields
 "
 changed
 "
+)
 "
 checking
 saved
@@ -2344,22 +2349,6 @@ submitted
 "
 )
 ;
-Services
-.
-obs
-.
-removeObserver
-(
-checkObserver
-"
-satchel
--
-storage
--
-changed
-"
-)
-;
 SimpleTest
 .
 finish
@@ -2379,14 +2368,6 @@ current
 form
 submission
 }
-checkObserver
-.
-waitForChecks
-(
-function
-(
-)
-{
 /
 /
 submit
@@ -2410,9 +2391,6 @@ click
 (
 )
 ;
-}
-)
-;
 return
 false
 ;
@@ -2422,6 +2400,118 @@ cancel
 current
 form
 submission
+}
+function
+getFormSubmitButton
+(
+formNum
+)
+{
+var
+form
+=
+(
+"
+form
+"
++
+formNum
+)
+;
+/
+/
+by
+id
+not
+name
+ok
+(
+form
+!
+=
+null
+"
+getting
+form
+"
++
+formNum
+)
+;
+/
+/
+we
+can
+'
+t
+just
+call
+form
+.
+submit
+(
+)
+because
+that
+doesn
+'
+t
+seem
+to
+/
+/
+invoke
+the
+form
+onsubmit
+handler
+.
+var
+button
+=
+form
+.
+firstChild
+;
+while
+(
+button
+&
+&
+button
+.
+type
+!
+=
+"
+submit
+"
+)
+{
+button
+=
+button
+.
+nextSibling
+;
+}
+ok
+(
+button
+!
+=
+null
+"
+getting
+form
+submit
+button
+"
+)
+;
+return
+button
+;
 }
 netscape
 .
@@ -2485,23 +2575,6 @@ window
 onload
 =
 startTest
-;
-Services
-.
-obs
-.
-addObserver
-(
-checkObserver
-"
-satchel
--
-storage
--
-changed
-"
-false
-)
 ;
 SimpleTest
 .
