Bug 585285 - Make styling for type="menu-button" toolbarbuttons respect the toolbarbutton-1 class. r=mano a=gavin
UltraBlame original commit: ace3eeec242ad5309168670d1606451360139b8e

--- a/browser/themes/gnomestripe/browser/browser.css
+++ b/browser/themes/gnomestripe/browser/browser.css
@@ -3266,6 +3266,19 @@ png
 toolbarbutton
 -
 1
+:
+not
+(
+[
+type
+=
+"
+menu
+-
+button
+"
+]
+)
 {
 -
 moz
@@ -3323,7 +3336,7 @@ margin
 -
 end
 :
-0px
+0
 ;
 }
 toolbar
@@ -3338,6 +3351,19 @@ full
 toolbarbutton
 -
 1
+:
+not
+(
+[
+type
+=
+"
+menu
+-
+button
+"
+]
+)
 toolbar
 [
 mode
@@ -3346,6 +3372,11 @@ mode
 full
 "
 ]
+.
+toolbarbutton
+-
+1
+>
 .
 toolbarbutton
 -
@@ -3364,6 +3395,24 @@ width
 toolbarbutton
 -
 1
+:
+not
+(
+[
+type
+=
+"
+menu
+-
+button
+"
+]
+)
+.
+toolbarbutton
+-
+1
+>
 .
 toolbarbutton
 -
@@ -4592,6 +4641,19 @@ small
 toolbarbutton
 -
 1
+:
+not
+(
+[
+type
+=
+"
+menu
+-
+button
+"
+]
+)
 {
 -
 moz
