--- a/browser/themes/pinstripe/browser/browser.css
+++ b/browser/themes/pinstripe/browser/browser.css
@@ -2231,11 +2231,9 @@ png
 toolbarbutton
 -
 1
-#
-restore
--
-button
-toolbarbutton
+:
+not
+(
 [
 type
 =
@@ -2245,6 +2243,11 @@ menu
 button
 "
 ]
+)
+.
+toolbarbutton
+-
+1
 >
 .
 toolbarbutton
@@ -2252,16 +2255,10 @@ toolbarbutton
 menubutton
 -
 button
+.
 toolbarbutton
-[
-type
-=
-"
-menu
 -
-button
-"
-]
+1
 >
 .
 toolbarbutton
@@ -2269,11 +2266,11 @@ toolbarbutton
 menubutton
 -
 dropmarker
+#
+restore
+-
+button
 {
-margin
-:
-0
-;
 -
 moz
 -
@@ -2339,6 +2336,72 @@ border
 box
 ;
 }
+.
+toolbarbutton
+-
+1
+>
+.
+toolbarbutton
+-
+menubutton
+-
+button
+.
+toolbarbutton
+-
+1
+>
+.
+toolbarbutton
+-
+menubutton
+-
+dropmarker
+{
+margin
+:
+0
+;
+}
+.
+toolbarbutton
+-
+1
+#
+restore
+-
+button
+{
+margin
+:
+0
+4px
+;
+list
+-
+style
+-
+image
+:
+url
+(
+"
+chrome
+:
+/
+/
+browser
+/
+skin
+/
+Toolbar
+.
+png
+"
+)
+;
+}
 toolbar
 :
 not
@@ -2380,32 +2443,10 @@ icons
 "
 ]
 )
-#
-restore
--
-button
-toolbar
-:
-not
-(
-[
-mode
-=
-"
-icons
-"
-]
-)
+.
 toolbarbutton
-[
-type
-=
-"
-menu
 -
-button
-"
-]
+1
 >
 .
 toolbarbutton
@@ -2425,16 +2466,10 @@ icons
 "
 ]
 )
+.
 toolbarbutton
-[
-type
-=
-"
-menu
 -
-button
-"
-]
+1
 >
 .
 toolbarbutton
@@ -2442,6 +2477,22 @@ toolbarbutton
 menubutton
 -
 dropmarker
+toolbar
+:
+not
+(
+[
+mode
+=
+"
+icons
+"
+]
+)
+#
+restore
+-
+button
 {
 padding
 :
@@ -2486,25 +2537,19 @@ button
 "
 ]
 )
-#
-restore
--
-button
+.
 toolbarbutton
-[
-type
-=
-"
-menu
 -
-button
-"
-]
+1
 >
 .
 toolbarbutton
 -
 menubutton
+-
+button
+#
+restore
 -
 button
 {
@@ -2556,8 +2601,15 @@ icons
 "
 ]
 )
-#
-restore
+.
+toolbarbutton
+-
+1
+>
+.
+toolbarbutton
+-
+menubutton
 -
 button
 toolbar
@@ -2572,21 +2624,8 @@ icons
 "
 ]
 )
-toolbarbutton
-[
-type
-=
-"
-menu
--
-button
-"
-]
->
-.
-toolbarbutton
--
-menubutton
+#
+restore
 -
 button
 {
@@ -2606,8 +2645,15 @@ toolbarbutton
 toolbarbutton
 -
 icon
-#
-restore
+.
+toolbarbutton
+-
+1
+>
+.
+toolbarbutton
+-
+menubutton
 -
 button
 >
@@ -2615,21 +2661,8 @@ button
 toolbarbutton
 -
 icon
-toolbarbutton
-[
-type
-=
-"
-menu
--
-button
-"
-]
->
-.
-toolbarbutton
--
-menubutton
+#
+restore
 -
 button
 >
@@ -2667,23 +2700,10 @@ true
 toolbarbutton
 -
 icon
-#
-restore
--
-button
-[
-disabled
-=
-"
-true
-"
-]
->
 .
 toolbarbutton
 -
-icon
-toolbarbutton
+1
 [
 type
 =
@@ -2712,6 +2732,22 @@ true
 toolbarbutton
 -
 icon
+#
+restore
+-
+button
+[
+disabled
+=
+"
+true
+"
+]
+>
+.
+toolbarbutton
+-
+icon
 {
 opacity
 :
@@ -2723,70 +2759,6 @@ opacity
 toolbarbutton
 -
 1
-#
-restore
--
-button
-toolbarbutton
-[
-type
-=
-"
-menu
--
-button
-"
-]
-{
-margin
-:
-0
-4px
-;
-}
-.
-toolbarbutton
--
-1
-#
-restore
--
-button
-{
-list
--
-style
--
-image
-:
-url
-(
-"
-chrome
-:
-/
-/
-browser
-/
-skin
-/
-Toolbar
-.
-png
-"
-)
-;
-}
-toolbarbutton
-[
-type
-=
-"
-menu
--
-button
-"
-]
 >
 .
 toolbarbutton
@@ -2852,16 +2824,10 @@ icons
 "
 ]
 )
+.
 toolbarbutton
-[
-type
-=
-"
-menu
 -
-button
-"
-]
+1
 >
 .
 toolbarbutton
@@ -2881,16 +2847,10 @@ top
 0
 ;
 }
+.
 toolbarbutton
-[
-type
-=
-"
-menu
 -
-button
-"
-]
+1
 >
 .
 toolbarbutton
@@ -2908,16 +2868,10 @@ dir
 (
 rtl
 )
+.
 toolbarbutton
-[
-type
-=
-"
-menu
 -
-button
-"
-]
+1
 >
 .
 toolbarbutton
@@ -2959,16 +2913,10 @@ bottomleft
 0
 ;
 }
+.
 toolbarbutton
-[
-type
-=
-"
-menu
 -
-button
-"
-]
+1
 >
 .
 toolbarbutton
@@ -2986,16 +2934,10 @@ dir
 (
 ltr
 )
+.
 toolbarbutton
-[
-type
-=
-"
-menu
 -
-button
-"
-]
+1
 >
 .
 toolbarbutton
@@ -3049,16 +2991,10 @@ icons
 "
 ]
 )
+.
 toolbarbutton
-[
-type
-=
-"
-menu
 -
-button
-"
-]
+1
 :
 not
 (
@@ -3093,16 +3029,10 @@ toolbarbutton
 toolbarbutton
 -
 text
+.
 toolbarbutton
-[
-type
-=
-"
-menu
 -
-button
-"
-]
+1
 >
 .
 toolbarbutton
@@ -3171,33 +3101,6 @@ mode
 icons
 "
 ]
-#
-restore
--
-button
-:
-not
-(
-[
-disabled
-=
-"
-true
-"
-]
-)
-:
-active
-:
-hover
-toolbar
-[
-mode
-=
-"
-icons
-"
-]
 .
 toolbarbutton
 -
@@ -3230,16 +3133,10 @@ mode
 icons
 "
 ]
+.
 toolbarbutton
-[
-type
-=
-"
-menu
 -
-button
-"
-]
+1
 :
 not
 (
@@ -3270,16 +3167,10 @@ mode
 icons
 "
 ]
+.
 toolbarbutton
-[
-type
-=
-"
-menu
 -
-button
-"
-]
+1
 [
 open
 =
@@ -3294,6 +3185,33 @@ toolbarbutton
 menubutton
 -
 dropmarker
+toolbar
+[
+mode
+=
+"
+icons
+"
+]
+#
+restore
+-
+button
+:
+not
+(
+[
+disabled
+=
+"
+true
+"
+]
+)
+:
+active
+:
+hover
 {
 background
 :
@@ -3494,35 +3412,10 @@ mode
 icons
 "
 ]
-#
-restore
--
-button
-:
--
-moz
--
-window
--
-inactive
-toolbar
-[
-mode
-=
-"
-icons
-"
-]
+.
 toolbarbutton
-[
-type
-=
-"
-menu
 -
-button
-"
-]
+1
 >
 .
 toolbarbutton
@@ -3545,16 +3438,10 @@ mode
 icons
 "
 ]
+.
 toolbarbutton
-[
-type
-=
-"
-menu
 -
-button
-"
-]
+1
 >
 .
 toolbarbutton
@@ -3562,6 +3449,25 @@ toolbarbutton
 menubutton
 -
 dropmarker
+:
+-
+moz
+-
+window
+-
+inactive
+toolbar
+[
+mode
+=
+"
+icons
+"
+]
+#
+restore
+-
+button
 :
 -
 moz
@@ -3671,26 +3577,6 @@ icons
 toolbarbutton
 -
 1
->
-menupopup
-toolbar
-[
-mode
-=
-"
-icons
-"
-]
-toolbarbutton
-[
-type
-=
-"
-menu
--
-button
-"
-]
 >
 menupopup
 {
