--- a/browser/themes/winstripe/browser/browser.css
+++ b/browser/themes/winstripe/browser/browser.css
@@ -2622,9 +2622,19 @@ rect
 .
 toolbarbutton
 -
+1
+>
+.
+toolbarbutton
+-
 menubutton
 -
 button
+.
+toolbarbutton
+-
+1
+>
 .
 toolbarbutton
 -
@@ -2818,6 +2828,11 @@ white
 .
 toolbarbutton
 -
+1
+>
+.
+toolbarbutton
+-
 menubutton
 -
 dropmarker
@@ -2836,6 +2851,11 @@ mode
 icons
 "
 ]
+.
+toolbarbutton
+-
+1
+>
 .
 toolbarbutton
 -
@@ -2879,6 +2899,19 @@ right
 toolbarbutton
 -
 1
+:
+not
+(
+[
+type
+=
+"
+menu
+-
+button
+"
+]
+)
 {
 -
 moz
@@ -2913,7 +2946,10 @@ png
 )
 ;
 }
+.
 toolbarbutton
+-
+1
 [
 type
 =
@@ -2963,16 +2999,6 @@ important
 toolbarbutton
 -
 1
-toolbarbutton
-[
-type
-=
-"
-menu
--
-button
-"
-]
 {
 margin
 :
@@ -2999,31 +3025,6 @@ icons
 toolbarbutton
 -
 1
-toolbar
-[
-iconsize
-=
-"
-small
-"
-]
-[
-mode
-=
-"
-icons
-"
-]
-toolbarbutton
-[
-type
-=
-"
-menu
--
-button
-"
-]
 {
 margin
 -
@@ -3038,6 +3039,11 @@ right
 2px
 ;
 }
+.
+toolbarbutton
+-
+1
+>
 .
 toolbarbutton
 -
@@ -3060,6 +3066,11 @@ none
 .
 toolbarbutton
 -
+1
+>
+.
+toolbarbutton
+-
 menubutton
 -
 button
@@ -3073,6 +3084,11 @@ dir
 (
 ltr
 )
+.
+toolbarbutton
+-
+1
+>
 .
 toolbarbutton
 -
@@ -3116,6 +3132,11 @@ bottomright
 .
 toolbarbutton
 -
+1
+>
+.
+toolbarbutton
+-
 menubutton
 -
 button
@@ -3129,6 +3150,11 @@ dir
 (
 rtl
 )
+.
+toolbarbutton
+-
+1
+>
 .
 toolbarbutton
 -
@@ -3172,32 +3198,6 @@ bottomleft
 .
 toolbarbutton
 -
-menubutton
--
-button
-[
-disabled
-=
-"
-true
-"
-]
-.
-toolbarbutton
--
-menubutton
--
-dropmarker
-[
-disabled
-=
-"
-true
-"
-]
-.
-toolbarbutton
--
 1
 [
 disabled
@@ -3216,9 +3216,7 @@ opacity
 .
 toolbarbutton
 -
-menubutton
--
-button
+1
 [
 disabled
 =
@@ -3226,6 +3224,13 @@ disabled
 true
 "
 ]
+>
+.
+toolbarbutton
+-
+menubutton
+-
+button
 >
 .
 toolbarbutton
@@ -3257,6 +3262,11 @@ opacity
 .
 toolbarbutton
 -
+1
+>
+.
+toolbarbutton
+-
 menubutton
 -
 button
@@ -3279,16 +3289,10 @@ active
 )
 :
 hover
+.
 toolbarbutton
-[
-type
-=
-"
-menu
 -
-button
-"
-]
+1
 :
 not
 (
@@ -3330,6 +3334,19 @@ true
 toolbarbutton
 -
 1
+:
+not
+(
+[
+type
+=
+"
+menu
+-
+button
+"
+]
+)
 :
 not
 (
@@ -3515,6 +3532,11 @@ in
 .
 toolbarbutton
 -
+1
+>
+.
+toolbarbutton
+-
 menubutton
 -
 button
@@ -3533,16 +3555,10 @@ true
 hover
 :
 active
+.
 toolbarbutton
-[
-type
-=
-"
-menu
 -
-button
-"
-]
+1
 :
 hover
 :
@@ -3565,16 +3581,10 @@ true
 "
 ]
 )
+.
 toolbarbutton
-[
-type
-=
-"
-menu
 -
-button
-"
-]
+1
 [
 open
 =
@@ -3597,6 +3607,19 @@ toolbarbutton
 not
 (
 [
+type
+=
+"
+menu
+-
+button
+"
+]
+)
+:
+not
+(
+[
 disabled
 =
 "
@@ -3612,6 +3635,19 @@ active
 toolbarbutton
 -
 1
+:
+not
+(
+[
+type
+=
+"
+menu
+-
+button
+"
+]
+)
 [
 checked
 =
@@ -3767,6 +3803,11 @@ color
 .
 toolbarbutton
 -
+1
+>
+.
+toolbarbutton
+-
 menubutton
 -
 button
@@ -3811,6 +3852,11 @@ iconsize
 small
 "
 ]
+.
+toolbarbutton
+-
+1
+>
 .
 toolbarbutton
 -
@@ -3978,6 +4024,11 @@ full
 .
 toolbarbutton
 -
+1
+>
+.
+toolbarbutton
+-
 menubutton
 -
 button
@@ -3999,12 +4050,72 @@ toolbarbutton
 #
 TabsToolbar
 >
+.
+toolbarbutton
+-
+1
+>
+.
+toolbarbutton
+-
+menubutton
+-
+button
+#
+TabsToolbar
+>
+.
+toolbarbutton
+-
+1
+>
+.
+toolbarbutton
+-
+menubutton
+-
+dropmarker
+#
+TabsToolbar
+>
 toolbarpaletteitem
 >
 .
 toolbarbutton
 -
 1
+#
+TabsToolbar
+>
+toolbarpaletteitem
+>
+.
+toolbarbutton
+-
+1
+>
+.
+toolbarbutton
+-
+menubutton
+-
+button
+#
+TabsToolbar
+>
+toolbarpaletteitem
+>
+.
+toolbarbutton
+-
+1
+>
+.
+toolbarbutton
+-
+menubutton
+-
+dropmarker
 #
 TabsToolbar
 >
@@ -4076,6 +4187,45 @@ shadow
 none
 !
 important
+;
+}
+#
+TabsToolbar
+>
+.
+toolbarbutton
+-
+1
+>
+.
+toolbarbutton
+-
+menubutton
+-
+dropmarker
+#
+TabsToolbar
+>
+toolbarpaletteitem
+>
+.
+toolbarbutton
+-
+1
+>
+.
+toolbarbutton
+-
+menubutton
+-
+dropmarker
+{
+-
+moz
+-
+appearance
+:
+none
 ;
 }
 #
