--- a/browser/themes/winstripe/browser/browser.css
+++ b/browser/themes/winstripe/browser/browser.css
@@ -63,6 +63,17 @@ xhtml
 )
 ;
 %
+include
+.
+.
+/
+.
+.
+/
+browserShared
+.
+inc
+%
 filter
 substitution
 %
@@ -3905,76 +3916,7 @@ moz
 -
 any
 (
-#
-back
--
-button
-#
-forward
--
-button
-#
-reload
--
-button
-#
-stop
--
-button
-#
-home
--
-button
-#
-print
--
-button
-#
-downloads
--
-button
-#
-history
--
-button
-#
-bookmarks
--
-button
-#
-bookmarks
--
-menu
--
-button
-#
-new
--
-tab
--
-button
-#
-new
--
-window
--
-button
-#
-cut
--
-button
-#
-copy
--
-button
-#
-paste
--
-button
-#
-fullscreen
--
-button
+primaryToolbarButtons
 )
 >
 .
