Backed out changeset 860c490eb849
UltraBlame original commit: 0868c30effb1a5fb0efd47d8a16cded4599f5cd9

--- a/browser/components/sessionstore/content/aboutSessionRestore.xhtml
+++ b/browser/components/sessionstore/content/aboutSessionRestore.xhtml
@@ -1152,6 +1152,46 @@ id
 buttons
 "
 >
+#
+ifdef
+XP_UNIX
+<
+button
+id
+=
+"
+errorCancel
+"
+label
+=
+"
+&
+restorepage
+.
+cancelButton
+;
+"
+accesskey
+=
+"
+&
+restorepage
+.
+cancel
+.
+access
+;
+"
+oncommand
+=
+"
+startNewSession
+(
+)
+;
+"
+/
+>
 <
 button
 id
@@ -1189,6 +1229,84 @@ restoreSession
 "
 /
 >
+#
+else
+<
+button
+id
+=
+"
+errorTryAgain
+"
+label
+=
+"
+&
+restorepage
+.
+tryagainButton
+;
+"
+accesskey
+=
+"
+&
+restorepage
+.
+restore
+.
+access
+;
+"
+oncommand
+=
+"
+restoreSession
+(
+)
+;
+"
+/
+>
+<
+button
+id
+=
+"
+errorCancel
+"
+label
+=
+"
+&
+restorepage
+.
+cancelButton
+;
+"
+accesskey
+=
+"
+&
+restorepage
+.
+cancel
+.
+access
+;
+"
+oncommand
+=
+"
+startNewSession
+(
+)
+;
+"
+/
+>
+#
+endif
 <
 /
 hbox
