--- a/browser/components/certerror/content/aboutCertError.xhtml
+++ b/browser/components/certerror/content/aboutCertError.xhtml
@@ -1214,6 +1214,78 @@ expertContent
 )
 ;
 }
+/
+/
+if
+this
+is
+a
+Strict
+-
+Transport
+-
+Security
+host
+and
+the
+cert
+/
+/
+is
+bad
+don
+'
+t
+allow
+overrides
+(
+STS
+Spec
+section
+7
+.
+3
+)
+.
+if
+(
+getCSSClass
+(
+)
+=
+=
+"
+badStsCert
+"
+)
+{
+var
+ec
+=
+document
+.
+getElementById
+(
+'
+expertContent
+'
+)
+;
+document
+.
+getElementById
+(
+'
+errorLongContent
+'
+)
+.
+removeChild
+(
+ec
+)
+;
+}
 var
 tech
 =
