--- a/toolkit/themes/gnomestripe/mozapps/extensions/extensions.css
+++ b/toolkit/themes/gnomestripe/mozapps/extensions/extensions.css
@@ -2534,30 +2534,15 @@ color
 transparent
 ;
 }
-.
+#
 search
 -
 filter
 {
 padding
 :
+5px
 20px
-;
--
-moz
--
-box
--
-align
-:
-center
-;
-background
--
-color
-:
-#
-FFF
 ;
 font
 -
@@ -2565,6 +2550,76 @@ size
 :
 120
 %
+;
+}
+#
+search
+-
+filter
+-
+label
+{
+font
+-
+weight
+:
+bold
+;
+color
+:
+grey
+;
+}
+.
+search
+-
+filter
+-
+radio
+{
+padding
+:
+0px
+6px
+;
+margin
+:
+0px
+3px
+;
+}
+.
+search
+-
+filter
+-
+radio
+.
+radio
+-
+spacer
+-
+box
+{
+display
+:
+none
+;
+}
+.
+search
+-
+filter
+-
+radio
+.
+radio
+-
+icon
+{
+display
+:
+none
 ;
 }
 #
