Bug 457801 (2/3) - Fix default placeholder style for XUL textboxes. r=enndeakin
UltraBlame original commit: b21458f2e3a20c0caf724f04ac4d54f9825fd403

--- a/toolkit/themes/faststripe/global/textbox.css
+++ b/toolkit/themes/faststripe/global/textbox.css
@@ -139,6 +139,36 @@ font
 inherit
 ;
 }
+html
+|
+*
+.
+textbox
+-
+input
+:
+-
+moz
+-
+placeholder
+html
+|
+*
+.
+textbox
+-
+textarea
+:
+-
+moz
+-
+placeholder
+{
+color
+:
+GrayText
+;
+}
 .
 textbox
 -
