--- a/toolkit/themes/gnomestripe/global/textbox.css
+++ b/toolkit/themes/gnomestripe/global/textbox.css
@@ -198,6 +198,36 @@ font
 inherit
 ;
 }
+html
+|
+*
+.
+textbox
+-
+input
+:
+-
+moz
+-
+placeholder
+html
+|
+*
+.
+textbox
+-
+textarea
+:
+-
+moz
+-
+placeholder
+{
+color
+:
+GrayText
+;
+}
 .
 textbox
 -
