Bug 457801 (1/3) - Implement -moz-placeholder pseudo-class. r=dbaron a2.0=blocking
UltraBlame original commit: f69cabe709ca0cebc9f572e9d6c7897467036c07

--- a/layout/style/forms.css
+++ b/layout/style/forms.css
@@ -613,6 +613,24 @@ inherit
 ;
 }
 input
+:
+-
+moz
+-
+placeholder
+textarea
+:
+-
+moz
+-
+placeholder
+{
+color
+:
+GrayText
+;
+}
+input
 >
 .
 placeholder
@@ -621,10 +639,6 @@ textarea
 .
 placeholder
 {
-color
-:
-GrayText
-;
 overflow
 :
 hidden
