Bug 457801 (3/3) - Fix :-moz-placeholder reftests. r?=?
UltraBlame original commit: ba7b3f3d3451cb571cc269abab72d2e59a760a5c

--- a/layout/reftests/css-placeholder/textarea/style.css
+++ b/layout/reftests/css-placeholder/textarea/style.css
@@ -8,6 +8,14 @@ textarea
 .
 ref
 {
+:
+-
+moz
+-
+appearance
+:
+none
+;
 color
 :
 black
@@ -33,6 +41,14 @@ complex
 -
 ref
 {
+:
+-
+moz
+-
+appearance
+:
+none
+;
 color
 :
 green
