--- a/layout/reftests/css-placeholder/input/style.css
+++ b/layout/reftests/css-placeholder/input/style.css
@@ -8,6 +8,14 @@ input
 .
 ref
 {
+:
+-
+moz
+-
+appearance
+:
+none
+;
 color
 :
 black
@@ -33,6 +41,14 @@ complex
 -
 ref
 {
+:
+-
+moz
+-
+appearance
+:
+none
+;
 color
 :
 green
