--- a/browser/base/content/browser.css
+++ b/browser/base/content/browser.css
@@ -707,15 +707,41 @@ inFullscreen
 ]
 >
 #
-appmenu
--
-button
--
-container
+titlebar
 {
 display
 :
 none
+;
+}
+#
+titlebar
+{
+-
+moz
+-
+binding
+:
+url
+(
+"
+chrome
+:
+/
+/
+global
+/
+content
+/
+bindings
+/
+general
+.
+xml
+#
+windowdragbox
+"
+)
 ;
 }
 %
