--- a/browser/themes/winstripe/browser/browser-aero.css
+++ b/browser/themes/winstripe/browser/browser-aero.css
@@ -125,6 +125,16 @@ compositor
 )
 {
 #
+titlebar
+-
+buttonbox
+{
+display
+:
+none
+;
+}
+#
 main
 -
 window
@@ -155,60 +165,6 @@ glass
 background
 :
 transparent
-;
-}
-#
-main
--
-window
-[
-sizemode
-=
-"
-maximized
-"
-]
-[
-chromemargin
-^
-=
-"
-0
-"
-]
-{
-margin
--
-top
-:
-8px
-;
-}
-#
-main
--
-window
-[
-sizemode
-=
-"
-normal
-"
-]
-[
-chromemargin
-^
-=
-"
-0
-"
-]
-{
-margin
--
-top
-:
-2px
 ;
 }
 #
