--- a/browser/themes/winstripe/browser/browser.css
+++ b/browser/themes/winstripe/browser/browser.css
@@ -558,76 +558,6 @@ start
 0
 ;
 }
-%
-ifndef
-WINSTRIPE_AERO
-#
-appmenu
--
-button
--
-container
-{
-background
-:
-ActiveCaption
-;
-}
-#
-appmenu
--
-button
--
-container
-:
--
-moz
--
-window
--
-inactive
-{
-background
-:
-InactiveCaption
-;
-}
-%
-endif
-#
-appmenu
--
-button
--
-container
-{
--
-moz
--
-binding
-:
-url
-(
-"
-chrome
-:
-/
-/
-global
-/
-content
-/
-bindings
-/
-general
-.
-xml
-#
-windowdragbox
-"
-)
-;
-}
 #
 appmenu
 -
@@ -1723,9 +1653,84 @@ rect
 )
 ;
 }
-%
-ifdef
-WINSTRIPE_AERO
+#
+titlebar
+{
+-
+moz
+-
+appearance
+:
+-
+moz
+-
+window
+-
+titlebar
+;
+margin
+-
+left
+:
+-
+15px
+;
+margin
+-
+right
+:
+-
+15px
+;
+}
+#
+main
+-
+window
+[
+sizemode
+=
+"
+maximized
+"
+]
+>
+#
+titlebar
+{
+-
+moz
+-
+appearance
+:
+-
+moz
+-
+window
+-
+titlebar
+-
+maximized
+;
+}
+#
+titlebar
+-
+content
+{
+margin
+-
+left
+:
+15px
+;
+margin
+-
+right
+:
+15px
+;
+}
 media
 not
 all
@@ -1736,22 +1741,28 @@ moz
 -
 windows
 -
-compositor
+classic
 )
 {
-%
-endif
 #
 main
 -
 window
 [
-tabsontop
+sizemode
 =
 "
-true
+normal
 "
 ]
+>
+#
+titlebar
+>
+#
+titlebar
+-
+content
 >
 #
 appmenu
@@ -1759,124 +1770,267 @@ appmenu
 button
 -
 container
->
-#
-appmenu
--
-button
 {
-position
-:
-relative
-!
-important
-;
+%
+ifndef
+WINSTRIPE_AERO
 margin
 -
-bottom
+top
 :
--
-1
-.
-6em
-!
-important
+1px
 ;
+%
+else
+margin
+-
+top
+:
+2px
+;
+%
+endif
+}
 }
 #
-navigator
+titlebar
 -
-toolbox
-[
-tabsontop
-=
-"
-true
-"
-]
->
-#
-toolbar
--
-menubar
-[
-autohide
-=
-"
-true
-"
-]
+buttonbox
 {
-position
-:
-relative
-!
-important
-;
-background
 -
-color
+moz
+-
+appearance
 :
 -
 moz
 -
-dialog
-!
-important
+window
+-
+button
+-
+box
+;
+-
+moz
+-
+box
+-
+align
+:
+start
 ;
 }
 #
-navigator
+main
 -
-toolbox
+window
 [
-tabsontop
+sizemode
 =
 "
-true
+maximized
 "
 ]
 >
 #
-toolbar
+titlebar
+>
+#
+titlebar
 -
-menubar
+content
+>
+#
+titlebar
+-
+buttonbox
+{
+-
+moz
+-
+appearance
+:
+-
+moz
+-
+window
+-
+button
+-
+box
+-
+maximized
+;
+}
+#
+titlebar
+-
+min
+{
+-
+moz
+-
+appearance
+:
+-
+moz
+-
+window
+-
+button
+-
+minimize
+;
+}
+#
+titlebar
+-
+max
+{
+-
+moz
+-
+appearance
+:
+-
+moz
+-
+window
+-
+button
+-
+maximize
+;
+}
+#
+main
+-
+window
 [
-autohide
+sizemode
 =
 "
-true
+maximized
 "
 ]
-~
+>
 #
-TabsToolbar
+titlebar
+>
+#
+titlebar
+-
+content
+>
+#
+titlebar
+-
+buttonbox
+>
+#
+titlebar
+-
+max
+{
+-
+moz
+-
+appearance
 :
+-
+moz
+-
+window
+-
+button
+-
+restore
+;
+}
+#
+titlebar
+-
+close
+{
+-
+moz
+-
+appearance
+:
+-
+moz
+-
+window
+-
+button
+-
+close
+;
+}
+media
 not
+all
+and
 (
-[
-inFullscreen
-]
+-
+moz
+-
+windows
+-
+classic
 )
 {
+#
+titlebar
+-
+min
+#
+titlebar
+-
+max
+{
 -
 moz
 -
-padding
+margin
+-
+end
+:
+2px
+;
+}
+}
+media
+all
+and
+(
+-
+moz
+-
+windows
+-
+classic
+)
+{
+#
+titlebar
+-
+close
+{
+-
+moz
+-
+margin
 -
 start
 :
-10em
+2px
 !
 important
 ;
 }
-%
-ifdef
-WINSTRIPE_AERO
 }
-%
-endif
 toolbarbutton
 .
 bookmark
