--- a/layout/style/test/test_value_computation.html
+++ b/layout/style/test/test_value_computation.html
@@ -766,6 +766,53 @@ top
 %
 "
 ]
+/
+/
+FIXME
+:
+file
+a
+bug
+"
+top
+"
+:
+[
+"
+12
+%
+"
+]
+"
+right
+"
+:
+[
+"
+12
+%
+"
+]
+"
+bottom
+"
+:
+[
+"
+12
+%
+"
+]
+"
+left
+"
+:
+[
+"
+12
+%
+"
+]
 }
 ;
 function
