--- a/layout/style/test/test_bug391034.html
+++ b/layout/style/test/test_bug391034.html
@@ -730,7 +730,7 @@ four
 .
 top
 "
-0px
+auto
 "
 "
 Incorrect
@@ -755,7 +755,7 @@ four
 .
 right
 "
-0px
+auto
 "
 "
 Incorrect
@@ -780,7 +780,8 @@ four
 .
 bottom
 "
-0px
+20
+%
 "
 "
 Incorrect
@@ -805,7 +806,8 @@ four
 .
 left
 "
-0px
+10
+%
 "
 "
 Incorrect
